export interface Evaluation {
  students: any;
  feedbacks: any;
  competencies: any;
}
