export interface CourseModel {
  id: string;
  key: string;
  name: string;
}
