export interface EvidenceModel {
  id: string;
  name: string;
  feedback: string;
  grade: number;
  speedGraderLink: string;
  fileType: string;
}
